--- a/Czech/main/DeskClock.apk/res/values-cs/plurals.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/plurals.xml
@@ -49,4 +49,8 @@
         <item quantity="other">Vymazat vybrané časové zóny?</item>
         <item quantity="one">Vymazat tuto časovou zónu?</item>
      </plurals>
+      <plurals name="second">
+        <item quantity="other">%ds</item>
+        <item quantity="one">%ds</item>
+     </plurals>
 </resources>
