--- a/Czech/main/Notes.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Notes.apk/res/values-cs/arrays.xml
@@ -52,6 +52,10 @@ http://www.miuios.cz/
         <item>Vytvořte si poznámku</item>
         <item>Můžete ji napsat, vložit obrázek a nahrát hlasem.</item>
         <item>Seznamy a upozornění vám pohou při nakupování.</item>
+ 	<item></item>	     
+ 	<item></item>	     
+ 	<item></item>	     
+ 	<item></item>	     
      </string-array>
      <string-array name="second_guide_contents">
         <item>Hlasové poznámky</item>
