--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/plurals.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/plurals.xml
@@ -41,4 +41,100 @@
          <item quantity="other">%s dalších upozornění.</item>
          <item quantity="one">%s další upozornění.</item>
      </plurals>	
+     <plurals name="incorrect_pincode_remaining_attempts">
+       <item quantity="other">Nesprávný PIN, zbývá: %d pokusy</item>
+       <item quantity="one">Nesprávný PIN, zbývá: %d pokus</item>
+   </plurals>
+   <plurals name="incorrect_pukcode_remaining_attempts">
+       <item quantity="other">Nesprávný PUK, zbývá: %d pokusy</item>
+       <item quantity="one">Nesprávný PUK, zbývá: %d pokus</item>
+   </plurals>
+   <plurals name="keyguard_charging_info_charging_full_need_hour_time__text">
+       <item quantity="other">Okolo %dh do nabití​</item>
+       <item quantity="one">Okolo %dh do nabití​</item>
+   </plurals>
+   <plurals name="keyguard_charging_info_charging_full_need_min_time__text">
+       <item quantity="other">Okolo %dmin do nabití​</item>
+       <item quantity="one">Okolo %dmin do nabití​​</item>
+   </plurals>
+   <plurals name="keyguard_charging_info_charging_full_need_time__text">
+       <item quantity="other">Okolo %1$dh %2$dmin do nabití</item>
+       <item quantity="one">Okolo %1$dh %2$dmin do nabití</item>
+   </plurals>
+	    <plurals name="keyguard_charging_info_could_use_hour_time_text">
+       <item quantity="other">Zbývá okolo %dh</item>
+       <item quantity="one">Zbývá okolo %dh</item>
+   </plurals>
+	    <plurals name="keyguard_charging_info_could_use_min_time_text">
+       <item quantity="other">Zbývá okolo %dmin</item>
+       <item quantity="one">Zbývá okolo %dmin</item>
+   </plurals>
+	    <plurals name="keyguard_charging_info_could_use_time_text">
+       <item quantity="other">Zbývá okolo %1$dh %2$dmin</item>
+       <item quantity="one">Zbývá okolo %1$dh %2$dmin</item>
+   </plurals>
+	    <plurals name="keyguard_charging_info_drained_hour_time_format">
+       <item quantity="other">%dh</item>
+       <item quantity="one">%dh</item>
+   </plurals>
+	    <plurals name="keyguard_charging_info_drained_min_time_format">
+       <item quantity="other">%dmin</item>
+       <item quantity="one">%dmin</item>
+   </plurals>
+	    <plurals name="keyguard_charging_info_drained_time_format">
+       <item quantity="other">%1$dh %2$dmin</item>
+       <item quantity="one">%1$dh %2$dmin</item>
+   </plurals> 
+    <plurals name="kg_password_default_pin_message">
+       <item quantity="other">Zadejte SIM PIN. Zbývá pokusů: %d</item>
+       <item quantity="one">Zadejte SIM PIN. Zbývá pokusů: %d</item>
+    </plurals>
+    <plurals name="kg_password_default_puk_message">
+       <item quantity="other">SIM je deaktivována. Zadejte PUK kód pro její odblokování. Máte %d pokusů, poté bude zablokována.</item>
+       <item quantity="one">SIM je deaktivována. Zadejte PUK kód pro její odblokování. Máte %d pokus, poté bude zablokována.</item>
+    </plurals>
+    <plurals name="kg_password_wrong_pin_code">
+       <item quantity="other">Nesprávný SIM PIN. Zbývá pokusů: %d</item>
+       <item quantity="one">Nesprávny SIM PIN. Zbývá pokusů: %d</item>
+    </plurals>
+    <plurals name="kg_password_wrong_puk_code">
+       <item quantity="other">Nesprávný SIM PUK. Zbývá pokusů: %d</item>
+       <item quantity="one">Nesprávný SIM PUK. Zbývá pokusů: %d</item>
+    </plurals>
+    <plurals name="kg_prompt_reason_time_password">
+       <item quantity="other">Zařízení nebylo odemknuto %d hodin. Potvrďte heslo.</item>
+       <item quantity="one">Zařízení nebylo odemknuto %d hodinu. Potvrďte heslo.</item>
+    </plurals>
+    <plurals name="kg_prompt_reason_time_pattern">
+       <item quantity="other">Zařízení nebylo odemknuto %d hodin. Potvrďte vzor.</item>
+       <item quantity="one">Zařízení nebylo odemknuto %d hodinu. Potvrďte vzor.</item>
+    </plurals>
+    <plurals name="kg_prompt_reason_time_pin">
+       <item quantity="other">Zařízení nebylo odemknuto %d hodin. Potvrďte PIN.</item>
+       <item quantity="one">Zařízení nebylo odemknuto %d hodinu. Potvrďte PIN.</item>
+    </plurals>
+	      <plurals name="new_notifications_msg">
+       <item quantity="other">Nové upozornění: %d</item>
+       <item quantity="one">Nové upozornění: %d</item>
+   </plurals>
+	     <plurals name="notification_channels_list_desc_2_and_others">
+       <item quantity="other">%1$s, %2$s a %3$d dalších</item>
+       <item quantity="one">%1$s, %2$s a %3$d dalších</item>
+       <item quantity="few">%1$s, %2$s a %3$d další</item>
+       <item quantity="many">%1$s, %2$s a %3$d dalších</item>
+   </plurals>
+	    <plurals name="notification_num_channels_desc">
+       <item quantity="other">1 z %s kategorií upozornění z této aplikace</item>
+       <item quantity="one">1 z %s kategorie upozornění z této aplikace</item>
+       <item quantity="few">1 z %s kategorií upozornění z této aplikace</item>
+       <item quantity="many">1 z %s kategorie upozornění z této aplikace</item>
+   </plurals>
+	     <plurals name="phone_locked_timeout_minutes_string">
+       <item quantity="other">Zkuste to znovu za %d minut</item>
+       <item quantity="one">Zkuste to znovu za %d minutu</item>
+    </plurals>
+    <plurals name="phone_locked_timeout_seconds_string">
+       <item quantity="other">Zkuste to znovu za %d sekund</item>
+       <item quantity="one">Zkuste to znovu za %d sekundu</item>
+    </plurals>
 </resources>
