--- a/Czech/main/SecurityCenter.apk/res/values-cs/plurals.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/plurals.xml
@@ -414,4 +414,20 @@
          <item quantity="other">%1$d hovorů od %2$s a ostatních</item>
          <item quantity="one">%1$d hovor od %2$s</item>
      </plurals>
+     <plurals name="menu_text_antivirus_2">
+        <item quantity="other">Položek: %d</item>
+        <item quantity="one">Položek: %d</item>
+   </plurals>
+    <plurals name="menu_text_antivirus_3">
+        <item quantity="other">Dní: %d</item>
+        <item quantity="one">Dní: %d</item>
+    </plurals>
+    <plurals name="menu_text_antispam_2">
+        <item quantity="other">Položek: %d</item>
+        <item quantity="one">Položek: %d</item>
+    </plurals>
+    <plurals name="menu_text_app_manager_2">
+        <item quantity="other">Aplikací: %d</item>
+        <item quantity="one">Aplikací: %dp</item>
+    </plurals>	
 </resources>
