--- a/Czech/main/Provision.apk/res/values-cs-rCZ/arrays.xml
+++ b/Czech/main/Provision.apk/res/values-cs-rCZ/arrays.xml
@@ -12,4 +12,9 @@
         <item>en_US</item>
         <item>en_GB</item>
     </string-array>
+    <string-array name="other_settings_auto_update_entries">
+        <item>Wi-Fi a mobilní data</item>
+        <item>Wi-Fi</item>
+        <item>Vypnuto</item>
+    </string-array>	
 </resources>
