--- a/Czech/main/Provision.apk/res/values-cs-rCZ/arrays.xml
+++ b/Czech/main/Provision.apk/res/values-cs-rCZ/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="popular_language_locales">
-        <item>cs_CZ</item>
+        <item>cs_CZ</item> 
         <item>sk_SK</item>
         <item>en_US</item>
         <item>en_GB</item>
@@ -13,7 +13,7 @@
         <item>en_GB</item>
     </string-array>
     <string-array name="other_settings_auto_update_entries">
-        <item>Wi-Fi a mobilní data</item>
+        <item>Wi-Fi a mobilnÃ­ data</item>
         <item>Wi-Fi</item>
         <item>Vypnuto</item>
     </string-array>	
