--- a/Czech/main/CleanMaster.apk/res/values-cs/arrays.xml
+++ b/Czech/main/CleanMaster.apk/res/values-cs/arrays.xml
@@ -59,4 +59,8 @@
       <string-array name="low_memory_clean_menu">
          <item>Vyčistit</item>
      </string-array>	
+     <plurals name="whatsapp_delete_files">
+        <item quantity="other">Vymazat soubory (%1$d)?</item>
+        <item quantity="one">Vymazat soubory (%1$d)?</item>
+    </plurals>	
 </resources>
