--- a/Czech/main/Settings.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Settings.apk/res/values-cs/arrays.xml
@@ -1016,4 +1016,8 @@ Postupujte dle pokynů"</item>
         <item>Grafický</item>
         <item>Procenta</item>
     </string-array>
+    <string-array name="status_bar_settings_notification_shade_shortcut_entries">
+        <item>Vyhledávání</item>
+        <item>Nastavení</item>
+    </string-array>	
 </resources>
