--- a/Czech/main/Notes.apk/res/values-cs/plurals.xml
+++ b/Czech/main/Notes.apk/res/values-cs/plurals.xml
@@ -26,7 +26,7 @@
         <item quantity="one">Zbývá %ds</item>
      </plurals>
      <plurals name="word_count">
-        <item quantity="other">%s znaků</item>
-        <item quantity="one">%s znak</item>
+        <item quantity="other">Znaků: %s</item>
+        <item quantity="one">Znaků: %s</item>
      </plurals>	
 </resources>
