--- a/Czech/main/DeskClock.apk/res/values-cs/arrays.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/arrays.xml
@@ -17,14 +17,14 @@
         <item>Zrušení budíku</item>
     </string-array>
     <string-array name="alarm_in_furture">
-        <item>Budík za méně než minutu</item>
-        <item>Budík za %1$s</item>
-        <item>Budík za %2$s</item>
-        <item>Budík za %1$s %2$s</item>
-        <item>Budík za %3$s</item>
-        <item>Budík za %1$s %3$s</item>
-        <item>Budík za %2$s %3$s</item>
-        <item>Budík za %1$s %2$s %3$s</item>
+        <item>Budík o méně než minutu</item>
+        <item>Budík o %1$s</item>
+        <item>Budík o %2$s</item>
+        <item>Budík o %1$s %2$s</item>
+        <item>Budík o %3$s</item>
+        <item>Budík o %1$s %3$s</item>
+        <item>Budík o %2$s %3$s</item>
+        <item>Budík o %1$s %2$s %3$s</item>
     </string-array>
     <string-array name="days">
         <item>Včera</item>
