--- a/Czech/main/Settings.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Settings.apk/res/values-cs/arrays.xml
@@ -696,16 +696,17 @@ Postupujte dle pokynů"</item>
         <item>Normální (720P)</item>
     </string-array>
     <string-array name="alarm_repeat_type">
+        <item>Jednou</item>
         <item>Každý den</item>
-	<item>Po-Pá</item>
-        <item>Víkend</item>
-        <item>Vybrat dny</item>
+        <item>Pracovní dny</item>
+        <item>Po-Pá</item>
+        <item>Vlastní</item>
     </string-array>
     <string-array name="alarm_repeat_type_no_workdays">
+        <item>Jednou</item>
         <item>Každý den</item>
-	<item>Po-Pá</item>
-        <item>Víkend</item>
-        <item>Vybrat dny</item>
+        <item>Po-Pá</item>
+        <item>Vlastní</item>
     </string-array>
     <string-array name="common_password_business_names">
         <item>Zámek displeje</item>
