--- a/Czech/main/Notes.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Notes.apk/res/values-cs/arrays.xml
@@ -60,5 +60,9 @@ http://www.miuios.cz/
      <string-array name="second_guide_contents">
         <item>Hlasové poznámky</item>
         <item>Nahrajte hlasovou poznámku.</item>
-     </string-array>	
+     </string-array>
+     <string-array name="second_guide_contents_pad_or_inter">
+        <item>Hlasové poznámky</item>
+        <item>Můžete nahrát i hlasovou poznámku.</item>
+    </string-array>	
 </resources>
