--- a/Czech/main/PowerKeeper.apk/res/values-cs/arrays.xml
+++ b/Czech/main/PowerKeeper.apk/res/values-cs/arrays.xml
@@ -99,6 +99,7 @@
      <string-array name="emode_app_groups">
         <item>Systémové aplikace</item>
         <item>Ostatní aplikace</item>
+        <item>Vybrané aplikace</item>
     </string-array>
     <string-array name="hmode_app_classify2">
         <item>Aktivní aplikace</item>
