--- a/Czech/main/MiuiGallery.apk/res/values-cs/plurals.xml
+++ b/Czech/main/MiuiGallery.apk/res/values-cs/plurals.xml
@@ -433,4 +433,8 @@
          <item quantity="other">Zbývá: %d</item>
          <item quantity="one">Zbývá: %d</item>
      </plurals>
+     <plurals name="creation_max_image">
+        <item quantity="other">Vyberte do %d fotografií</item>
+        <item quantity="one">Vyberte do %d fotografií</item>
+    </plurals>
 </resources>
