--- a/Czech/main/DeskClock.apk/res/values-cs/plurals.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/plurals.xml
@@ -53,4 +53,8 @@
         <item quantity="other">%ds</item>
         <item quantity="one">%ds</item>
      </plurals>
+     <plurals name="snooze_duration_summary">
+        <item quantity="other">Budík se vypne %2$s krát (%1$s min. každý)</item>
+        <item quantity="one">Budík se vypne %2$s krát (%1$s min.)</item>
+    </plurals>
 </resources>
