--- a/Czech/main/Settings.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Settings.apk/res/values-cs/arrays.xml
@@ -1030,4 +1030,13 @@ Postupujte dle pokynů"</item>
 	<item>Zvonění</item>
 	<item>Média</item>
     </string-array>	
+     <string-array name="status_bar_settings_qs_layout_entries">
+ 	<item>Výchozí</item>
+ 	<item>Kompaktní</item>
+ 	</string-array>	
+ 	<string-array name="aod_clock_style_entries">
+ 	<item>Horizontální</item>
+ 	<item>Vertikální</item>
+ 	<item>V řádku</item>
+ 	</string-array>	
 </resources>
