--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/plurals.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/plurals.xml
@@ -69,6 +69,9 @@
        <item quantity="other">Zbývá okolo %dmin</item>
        <item quantity="one">Zbývá okolo %dmin</item>
    </plurals>
+   <plurals name="aod_dual_togother_city">
+        <item quantity="other">" %1$s Hodina %2$s"</item>
+    </plurals>	
 	    <plurals name="keyguard_charging_info_could_use_time_text">
        <item quantity="other">Zbývá okolo %1$dh %2$dmin</item>
        <item quantity="one">Zbývá okolo %1$dh %2$dmin</item>
