--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/plurals.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/plurals.xml
@@ -70,6 +70,7 @@
        <item quantity="one">Zbývá okolo %dmin</item>
    </plurals>
    <plurals name="aod_dual_togother_city">
+        <item quantity="other">" %1$s Hodin %2$s"</item>
         <item quantity="other">" %1$s Hodina %2$s"</item>
     </plurals>	
 	    <plurals name="keyguard_charging_info_could_use_time_text">
