--- a/Czech/main/Settings.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Settings.apk/res/values-cs/arrays.xml
@@ -1032,6 +1032,10 @@ Postupujte dle pokynů"</item>
         <item>Vyhledávání</item>
         <item>Nastavení</item>
     </string-array>	
+    <string-array name="notification_shade_shortcut_entries">
+        <item>Vyhledávání</item>
+        <item>Nastavení</item>
+    </string-array>	
     <string-array name="default_vol_stream_entries">
 	<item>Zvonění</item>
 	<item>Média</item>
