--- a/Czech/main/DeskClock.apk/res/values-cs/arrays.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/arrays.xml
@@ -98,4 +98,9 @@
         <item>Celkem %2$s%3$s</item>
         <item>Celkem %1$s%2$s%3$s</item>
      </string-array>
+    <string-array name="clock_bg_setting_entries">
+        <item>Bílé</item>
+        <item>Čierné</item>
+        <item>Auto</item>
+    </string-array>		
 </resources>
