--- a/Czech/main/Settings.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Settings.apk/res/values-cs/arrays.xml
@@ -1058,5 +1058,10 @@ Postupujte dle pokynů"</item>
         <item>MIUI bude rozhodovat které upozornění mají být zobrazeny</item>
         <item>Upozornění budou zobrazena v roletce</item>
         <item>Upozornění budou zobrazena v samostatné složce</item>
+    </string-array>
+    <string-array name="drip_battery_indicator_style_entries">
+        <item>Grafický</item>
+        <item>Procenta (v ikoně)</item>
+        <item>Procenta (vedle ikony)</item>
     </string-array>	
 </resources>
