--- a/Czech/main/Settings.apk/res/values-cs/arrays.xml
+++ b/Czech/main/Settings.apk/res/values-cs/arrays.xml
@@ -1063,5 +1063,10 @@ Postupujte dle pokynů"</item>
         <item>Grafický</item>
         <item>Procenta (v ikoně)</item>
         <item>Procenta (vedle ikony)</item>
+    </string-array>
+    <string-array name="drip_battery_indicator_style_entries">
+        <item>Grafická</item>
+        <item>Procenta (v ikone)</item>
+        <item>Procenta (vedle ikony)</item>
     </string-array>	
 </resources>
