--- a/Czech/main/SecurityCenter.apk/res/values-cs/plurals.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/plurals.xml
@@ -481,5 +481,13 @@
     <plurals name="function_shield_num">
         <item quantity="other">Funkcí: %d</item>
         <item quantity="one">Funkcí: %d</item>
-    </plurals>		
+    </plurals>
+    <plurals name="notification_battery_scan_consume_abnormal_title_split">
+        <item quantity="other">%2$d apl., včetně %1$s, vybíjejí baterii</item>
+        <item quantity="one">%2$d apl., včetně %1$s, vybíjí baterii</item>
+    </plurals>
+    <plurals name="pc_abnormal_scan_result_model_result_title">
+        <item quantity="other">%d apl. vybíjejí baterii</item>
+        <item quantity="one">%d apl. vybíjí baterii</item>
+    </plurals>			
 </resources>
